fix width of the information table in about when it's too narrow

--- a/inst/www/common.css
+++ b/inst/www/common.css
@@ -195,3 +195,7 @@ body:not(.modal-open) {
   font-weight: bold;
   font-size: 1.2rem;
 }
+
+.about-information-table {
+  overflow-x: auto;
+}
